card2 heading edited

--- a/card2.html
+++ b/card2.html
@@ -9,7 +9,7 @@
 <body>
 <div class="card2">
           <img class="man_img" src="check mail.png" alt="">
-          <h1 class="mail_heading">Check you email</h1>
+          <h1 class="mail_heading">Check your email</h1>
           <p class="code_msg">Enter the 6-digit code we just sent to  <span style="color: black; font-weight: bold;">google.com</span> to continue.</p>
           <input class="input" type="text" value="55426|">
           <button class="con_btn">continue</button>
